--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "SECURITY.md"
   ],
   "dependencies": {
-    "axios": "^1.4.0",
-    "typescript": "^5.1.3"
+    "axios": "^1.4.0"
   },
   "devDependencies": {
-    "@types/node": "^20.3.3"
+    "@types/node": "^20.3.3",
+    "typescript": "^5.1.6"
   },
   "workspaces": [
     "./",
